--- a/cortex/gui/gui_client/css/cortex.css
+++ b/cortex/gui/gui_client/css/cortex.css
@@ -26,30 +26,30 @@ h1 {
 }
 
 input {
-  display: block;    
+  display: block;
   border: 1px solid transparent;
   background-color: #f1f1f1;
   padding: 10px;
   font-size: 16px;
 }
-input[type="text"] {    
+input[type="text"] {
   width: 250px;
 }
-input[type="submit"] {  
+input[type="submit"] {
   background-color: DodgerBlue;
   color: #fff;
 }
 
-.search_boxes {  
-  display: table;  
+.search_boxes {
+  display: table;
 }
 
 .search_box {
   display: table-cell;
 }
 
-div.search_boxes div:nth-child(n+2) {
-   padding-left: 5px;
+div.search_boxes div:nth-child(n + 2) {
+  padding-left: 5px;
 }
 
 /* Autocomplete Section */
@@ -58,10 +58,10 @@ ul.ui-autocomplete {
 }
 
 .ui-autocomplete {
-  width : 100px;
+  width: 100px;
   padding: 10px;
   cursor: pointer;
-  background-color: #fff;  
+  background-color: #fff;
 }
 
 .ui-menu .ui-menu-item:hover {
@@ -69,7 +69,14 @@ ul.ui-autocomplete {
   background-color: #6692bc94;
 }
 
-.ui-state-hover, .ui-state-focus {
+.ui-state-hover,
+.ui-state-focus {
   /*when hovering an item:*/
   background-color: #6692bc94;
+}
+
+.ui-helper-hidden-accessible {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 90px;
 }
