--- a/cortex/gui/gui_client/css/cortex.css
+++ b/cortex/gui/gui_client/css/cortex.css
@@ -65,6 +65,11 @@ div.search_boxes div:nth-child(n + 2) {
   padding-left: 5px;
 }
 
+/* Images Section */
+.image_link {
+  cursor: hand;
+}
+
 /* Autocomplete Section */
 ul.ui-autocomplete {
   list-style: none;
